Minor UI code cleanup
1. Remove redundant layout managers and themes
2. Refactor the ids of layouts

--- a/kotlin-android-project/app/src/main/res/layout/item_person_renderer.xml
+++ b/kotlin-android-project/app/src/main/res/layout/item_person_renderer.xml
@@ -23,13 +23,13 @@
     android:padding="@dimen/large_margin">
 
   <TextView
-      android:id="@+id/name"
+      android:id="@+id/title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/TextAppearance.AppCompat.Headline" />
 
   <TextView
-      android:id="@+id/address"
+      android:id="@+id/subtitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/small_margin"
